# biomedpilot-v1.0

./: .gitignore  BioMedPilot_Impeccable_UI_Polish_Instructions.md  CODEX.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  pyproject.toml  requirements.txt
archive/legacy_sources/model9/: AGENTS.md  README.md  pyproject.toml  requirements.txt
archive/legacy_sources/model9/ai/: __init__.py
archive/legacy_sources/model9/analysis/: __init__.py  analysis_preflight.py  comparison_readiness.py  deg_summary.py  group_detection.py  models.py  profile_adapter.py
archive/legacy_sources/model9/analysis_profiles/: __init__.py  models.py  store.py
archive/legacy_sources/model9/app/: biomed_icons.py  bootstrap.py  main_window.py  profile_readiness_panel_widget.py  profile_row_editor_widget.py  reporting_summary_widget.py  ui_icon_registry.py  ui_style_tokens.py  workbench_home_widget.py
archive/legacy_sources/model9/app_meta/: main.py  main_window.py
archive/legacy_sources/model9/bias/: models.py
archive/legacy_sources/model9/core/: __init__.py  config.py  dataset_readiness.py  demo_project_loader.py  logging_config.py  profile_row_validation.py  task_runner_adapters.py
archive/legacy_sources/model9/docs/: controlled_real_geo_readiness_test.md  dev_task_queue.md  gse33630_demo_readiness_report.md  local_dataset_standardization.md  module7_task_management.md  profile_to_reporting_baseline.md  ui_design_implementation_plan.md  ui_integration_readiness_audit.md  workbench_desktop_entry_acceptance_checklist.md
archive/legacy_sources/model9/extraction/: __init__.py  service.py
archive/legacy_sources/model9/fulltext/: __init__.py
archive/legacy_sources/model9/geo_readiness/: models.py  platform_annotation_parser.py  real_dataset_report.py  series_matrix_parser.py  soft_parser.py
archive/legacy_sources/model9/literature/: __init__.py  dedup.py  dedup_service.py  models.py  screening_service.py  store.py
archive/legacy_sources/model9/local_data/: standardizer.py
archive/legacy_sources/model9/reporting/: service.py
archive/legacy_sources/model9/scripts/: check_local_environment.py  check_packaging_readiness.py  project_status_snapshot.py  run_geo_accession_readiness.py  run_smoke_tests.py
archive/legacy_sources/model9/tests/: qt_test_utils.py  test_analysis_profile_consumption.py  test_app_identity.py  test_artifact_preview.py  test_comparison_readiness.py  (+28 more)
(+2764 files in other folders)
