[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomedpilot"
version = "0.1.0"
description = "Unified Bioinformatics and Meta Analysis desktop shell."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
biomedpilot = "app.main:main"
labtools = "labtools.__main__:main"

[tool.setuptools]
packages = { find = { include = ["app*", "labtools*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
