[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model9"
version = "0.1.0"
description = "Cross-platform desktop application skeleton based on Python and PySide6."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
model9 = "app.__main__:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
app = ["resources/icons/app_icon.png", "resources/icons/app_icon.icns"]

[tool.setuptools.packages.find]
include = ["app*", "core*", "literature*", "extraction*", "analysis*", "analysis_profiles*", "reporting*", "ai*", "fulltext*", "bias*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
